<resources>
    <string name="app_name">Baddelni</string>
    <string name="don_t_have_account_sign_in_here">Don\'t have account Sign In Here</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="facebook_app_id" translatable="false">290214045031493</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb290214045031493</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="privacyText">By signing up, you agree to our Terms Of Use</string>
    <string name="sign_in">Sign In</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="add_other">Add Other</string>
    <string name="create">Create</string>
    <string name="buyPost">Buy Post</string>
    <string name="deleteAll">Delete All</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="help_center">Help Center</string>
    <string name="about_app">About App</string>
    <string name="buy_post">Buy Post</string>
    <string name="advertise_with_us">Advertise with us</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="interests">Interests</string>
    <string name="category">Category</string>
    <string name="addNew">New Add</string>
    <string name="buyNewPosts">Buy New Post</string>
    <string name="avaliablePosts">Available Posts</string>
    <string name="already_have_account_log_in_here">Already have account Log In Here</string>
    <string name="newPost">New Post</string>
    <string name="favorites">Favorites</string>
    <string name="internetError">Please check your internet</string>
    <string name="subject">Subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="channel_name">chanel1</string>
    <string name="channel_description">channel Desc</string>
    <string name="refused">Refused</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="selectPhotoFromGallery">Select photo from gallery</string>
    <string name="capturePhotoFromCamera">Capture photo from camera</string>
    <string name="selectAction">Select Action</string>
    <string name="updateSuccessful">Update Successful</string>
    <string name="updateUnSuccessful">Update Unsuccessful</string>
    <string name="ErrorPleaseTryAgainLater">Error Please Try again later</string>
    <string name="decline">Decline</string>
    <string name="sureDecline">Are you sure want to decline?</string>
    <string name="request">Request</string>
    <string name="myRequest">My Request</string>
    <string name="products">Products</string>
    <string name="quick">Quick</string>
    <string name="topInYourCity">Best offers</string>
    <string name="latestAds">Latest ads</string>
    <string name="topInYourIntrest">Top in Your Interest</string>
    <string name="malformedLink">malformed link</string>
    <string name="selectYourIntrestFirst">Select a Interest First</string>
    <string name="pleaseVerifyAccount">Please verify your account and proceed with login</string>
    <string name="emailActivationLinkAgain">Enter Email to send Activation link again</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="couldntVeryfyAccount">Couldn\'t verify your social account. Please try some other way to login.</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="errorOccurred">Error Occurred, error code:</string>
    <string name="facebookAccountNotFullyVerified">Failed to authenticate with your Facebook account… Facebook does not allow us to obtain the necessary data to sign in. Please use another method to sign in</string>
    <string name="fbError">Facebook Error</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="appNeedPermission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="needPermission">Need Permissions</string>
    <string name="goToSetting">GO TO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="validFor">Valid For</string>
    <string name="days">Days</string>
    <string name="posts">POSTS</string>
    <string name="currencyKd">KD</string>

    <string name="postAddedSuccessful">Post Added Successful</string>
    <string name="selectCategoryFirst">Please Select Category first</string>

    <string name="sureLogout">Are you sure want to Logout?</string>
    <string name="exitApp">Are you want to exit Baddelni App?</string>
    <string name="exit">Exit</string>
    <string name="packageTxt">Package</string>
    <string name="create_new_post">Create New Post</string>
    <string name="tap_here_to_upload_ads_photo">Tap here to upload Ads photo</string>
    <string name="name">Name</string>
    <string name="sub_category">Sub Category</string>
    <string name="details">Details</string>
    <string name="add_other_photo">Add other Photo</string>
    <string name="tap_here_to_upload_baddelni_items">Tap here to upload baddelni items</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="i_understand">I Understand</string>
    <string name="congratulation">Congratulation</string>
    <string name="baddelni_deal">Baddelni Deal</string>
    <string name="done">Done</string>
    <string name="tap_here_to_upload_other_photo">Tap here to upload Other photo</string>
    <string name="change_name">change Name</string>
    <string name="change_mail">change Mail</string>
    <string name="change_country">Change Country</string>
    <string name="change_phone">change Phone</string>
    <string name="change_password">change Password</string>
    <string name="phone">Phone</string>
    <string name="about_you_text">about you text</string>
    <string name="about_you">About You</string>
    <string name="change">Change</string>
    <string name="user_name">User-Name</string>
    <string name="accept">Accept</string>
    <string name="my_ads">My Ads</string>
    <string name="new_post">New Post</string>
    <string name="resend_activation_link">Resend activation link</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="and_privacy_policy">and Privacy Policy</string>
    <string name="product_name">Product Name</string>
    <string name="show_all">Show All</string>
    <string name="description">Description</string>
    <string name="failed">Failed</string>
    <string name="available_posts">Available Posts</string>
    <string name="requests">Requests</string>
    <string name="my_request">My Request</string>
    <string name="my_account">My Account</string>
    <string name="new_request">New Request</string>
    <string name="shareVia">Share via</string>
    <string name="share">Share</string>
    <string name="installPlayServices">Please install Google Play Services first to run this App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choosePrefredLang">Choose Preferred Language</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>


    <array name="appLangs">
        <item>@string/english</item>
        <item>@string/arabic</item>
        <item>@string/hindi</item>
    </array>

    <string name="pleaseWait">Please Wait</string>
    <string name="no_notifications">No Notifications</string>
    <string name="no_requests_start_now">No Requests\n Start Now</string>
    <string name="no_post_start_new_post">No Post Start\n New Post</string>
    <string name="enterAllFields">Please Enter All Fields</string>
    <string name="addOther">Add Other</string>
    <string name="baddelni">Baddelni</string>
    <string name="choose_baddelni_items">Choose Baddelni Items</string>

    <string name="red" translatable="false">#ff0000</string>
    <string name="blue" translatable="false">#00ff00</string>
    <string name="green" translatable="false">#0000ff</string>

    <string name="enterValidName">Please enter valid name.</string>
    <string name="enterValidEmail">Please enter valid email.</string>
    <string name="enterValidSubject">Please enter valid subject.</string>
    <string name="enterValidMessage">Please enter valid message.</string>
    <string name="selectImage">Please select Image</string>
    <string name="skip">Skip</string>
    <string name="title">Title</string>

    <string name="favoriteWithCount">%1$s Favorites</string>
    <string name="notificationWithCount">%1$s Notifications</string>
    <string name="gender">Gender</string>
    <string name="guest_user">Guest User</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="add_photo">Add Photo</string>
    <string name="main_photo">Main Photo</string>
    <string name="item_name">Item Name</string>
    <string name="gender_optional">Gender (Optional)</string>
    <string name="guestUser">Guest User</string>
    <string name="dont_have_permission">Guest User dosn\'t have permission to use this feature</string>
    <string name="edit">Edit</string>
    <string name="republish">Republish</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="new_add">New Add</string>
    <string name="newVersionAvaliable">We fixed bugs in current version. Please update to latest version of the application for better user experience.</string>
    <string name="sureLogin">Are you sure want to Login?</string>
    <string name="selling_items">Selling Items</string>
    <string name="price">Price</string>

    <string name="successfuly_republished">Successfully Republished</string>
    <string name="enterPrice">Enter Price</string>
    <string name="noAdAvaliable">No ad available for your country</string>
    <string name="baddline_items">Baddline Items</string>
    <string name="make_the_ad_special">Make The Ad Special</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="in_chat">in Chat</string>
    <string name="load_all_items">Load All Items</string>
    <string name="no_data_found_with_your_search">No Data Found with your search</string>
    <string name="find">Find</string>

</resources>
